# drink-detector

./: .gitignore  README.md  app.py  config.py  drink_detection.py  pyproject.toml  requirements.txt  stock_types.json
src/drink_detector/: __init__.py  broker.py  config.py  db.py  drink_detection.py  files.py  server.py  sse.py
src/drink_detector/tasks/: drink_detection.py  similarity.py
src/drink_detector/templates/: base.html  capture.html  detection_result.html  feed.html  history.html  request_accepted.html  request_form.html  similarity_result.html  stock.html
templates/: base.html  capture.html  empty_feed.html  feed.html  history.html
